// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query: properties successfully retrieves property summary.count data 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "summary": Object {
        "count": 120,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=86400, public",
        ],
      },
    },
  },
}
`;

exports[`Query: properties successfully retrieves property summary.price data 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "summary": Object {
        "price": Object {
          "median": 150,
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=86400, public",
        ],
      },
    },
  },
}
`;

exports[`Query: properties successfully retrieves results 1`] = `
Object {
  "data": Object {
    "properties": Object {
      "results": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
